--- a/static/locales/en/translations.json
+++ b/static/locales/en/translations.json
@@ -1,5 +1,4 @@
 {
-  "settings": {
-    "lang": "Select Language"
-  }
+  "lang": "Select Language",
+  "introduce": "Hello this is eGroup's reactjs startkit we build it for unified frontend structure and develop tools. Also we write some example to show how our startkit work."
 }
